tests/e2e/function_call_only_name4.story
function foo returns int
    return 0

foo[0]()
